--- a/Code/app/src/main/res/layout/item_gif.xml
+++ b/Code/app/src/main/res/layout/item_gif.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:background="#32FFFFFF">
 
     <LinearLayout
         android:id="@+id/line1"
@@ -28,6 +29,7 @@
             android:paddingStart="10dp"
             android:paddingLeft="10dp"
             android:text="@string/phan_dinh_tung"
+            android:textColor="@android:color/background_light"
             android:textSize="20sp"
             tools:ignore="RtlSymmetry" />
 
@@ -45,7 +47,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="@string/ru_thang_ban_ra_duong_thoi_cac_thanh_oi_v"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/background_light"
         android:textSize="30sp"
         app:layout_constraintTop_toBottomOf="@+id/line1" />
 
@@ -79,23 +81,30 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="30dp"
+        android:background="#63FFFFFF"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/frameLayout"
         app:layout_constraintStart_toStartOf="@+id/frameLayout">
 
+        <TextView
+            android:layout_width="35dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
         <ImageView
             android:id="@+id/img_like"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            app:srcCompat="@drawable/like" />
+            android:background="@drawable/like" />
 
         <TextView
             android:id="@+id/tv_like"
             android:layout_width="70dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:paddingStart="10dp"
             android:paddingLeft="10dp"
@@ -105,12 +114,13 @@
             android:id="@+id/img_dislike"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            app:srcCompat="@drawable/dislike" />
+            android:background="@drawable/dislike" />
 
         <TextView
             android:id="@+id/tv_dislike"
             android:layout_width="70dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:paddingStart="10dp"
             android:paddingLeft="10dp"
@@ -125,12 +135,13 @@
             android:id="@+id/img_comment"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            app:srcCompat="@drawable/comment" />
+            android:background="@drawable/comment" />
 
         <TextView
             android:id="@+id/tv_comment"
             android:layout_width="70dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:paddingStart="10dp"
             android:paddingLeft="10dp"
@@ -140,12 +151,15 @@
             android:id="@+id/img_share"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            app:srcCompat="@drawable/share" />
+            android:background="@drawable/share"
+
+            />
 
         <TextView
             android:id="@+id/tv_share"
-            android:layout_width="70dp"
+            android:layout_width="35dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:paddingStart="10dp"
             android:paddingLeft="10dp"
