--- a/Code/app/src/main/res/layout/dialog_share.xml
+++ b/Code/app/src/main/res/layout/dialog_share.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#F3F0F0">
+    android:background="@drawable/background_sharegif">
 
     <TextView
         android:id="@+id/textView"
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Chia sẻ với"
-        android:textColor="#110D0D"
+        android:textColor="@android:color/background_light"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
