--- a/Code/app/src/main/res/layout/fragment_profileuser_main.xml
+++ b/Code/app/src/main/res/layout/fragment_profileuser_main.xml
@@ -9,9 +9,9 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:orientation="horizontal"
-            android:layout_height="160dp"
+            android:layout_height="150dp"
             android:background="@drawable/bg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,39 +29,27 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:srcCompat="@drawable/menu" />
 
-    <ImageButton
-        android:id="@+id/imgbtn_addfriend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:background="@color/transparent"
-        android:contentDescription="@string/image_setting"
-        app:layout_constraintBottom_toBottomOf="@+id/imgbtn_setting"
-        app:layout_constraintEnd_toStartOf="@+id/imgbtn_setting"
-        app:layout_constraintTop_toTopOf="@+id/imgbtn_setting"
-        app:srcCompat="@drawable/add_user" />
-
-    <FrameLayout
+        <FrameLayout
         android:id="@+id/frlo"
-        android:layout_width="106dp"
-        android:layout_height="wrap_content"
+        android:layout_width="110sp"
+        android:layout_height="110sp"
         android:layout_marginStart="8sp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="110sp"
         android:layout_marginEnd="8sp"
         app:layout_constraintEnd_toStartOf="@+id/imgbtn_setting"
         app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearLayout">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imgAnhUser"
-            android:layout_width="110sp"
-            android:layout_height="110sp"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            android:src="@drawable/af"
-            app:civ_border_color="@color/black"
-            app:civ_border_width="5dp" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgAnhUser"
+                android:layout_width="110sp"
+                android:layout_height="110sp"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:src="@drawable/af"
+                app:civ_border_color="@color/black"
+                app:civ_border_width="5dp" />
 
     </FrameLayout>
 
@@ -69,10 +57,10 @@
         android:id="@+id/txtTenUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="a"
         android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/frlo"
+        android:textSize="17dp"
         app:layout_constraintStart_toStartOf="@+id/frlo"
         app:layout_constraintTop_toBottomOf="@+id/frlo" />
 
@@ -84,6 +72,7 @@
         android:text="@string/facebook_app_id"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/txtTenUser"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txtTenUser"
         app:layout_constraintTop_toBottomOf="@+id/txtTenUser" />
 
@@ -258,18 +247,14 @@
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/bg_textview_follow"
-        android:gravity="center"
-        android:text="@string/follow"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/imgbtn_addfriend"
-        app:layout_constraintEnd_toStartOf="@+id/imgbtn_addfriend"
-        app:layout_constraintStart_toEndOf="@+id/frlo"
-        app:layout_constraintTop_toTopOf="@+id/imgbtn_addfriend" />
+    <!--<TextView-->
+        <!--android:id="@+id/textView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@drawable/bg_textview_follow"-->
+        <!--android:gravity="center"-->
+        <!--android:text="@string/follow"-->
+        <!--android:textColor="@color/white"-->
+        <!--tools:layout_editor_absoluteX="155dp"-->
+        <!--tools:layout_editor_absoluteY="170dp" />-->
 </android.support.constraint.ConstraintLayout>
