--- a/Code/app/src/main/res/drawable/gradient_bg.xml
+++ b/Code/app/src/main/res/drawable/gradient_bg.xml
@@ -4,8 +4,8 @@
     <shape>
         <gradient
             android:angle="90"
-            android:startColor="#ff3333"
-            android:endColor="#3385ff"
+            android:endColor="#ff3399"
+            android:startColor="#1a000d"
             android:type="linear" />
     </shape>
 </item>
