--- a/Code/app/src/main/res/layout/fragment_home.xml
+++ b/Code/app/src/main/res/layout/fragment_home.xml
@@ -3,31 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/gradient_bg"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-       android:id="@+id/tvUserHome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="abc"
-        />
+    android:layout_height="match_parent">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayoutHome"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         app:tabMode="fixed"
-        app:tabGravity="fill"
+        app:tabGravity="center"
+        app:tabTextColor="@color/white"
         app:tabBackground="@android:color/transparent"
-        app:tabIndicatorColor="@android:color/transparent"
+        app:tabIndicatorColor="@android:color/white"
         app:tabIndicatorHeight="4dp"
         android:background="@android:color/transparent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvUserHome">
+        app:layout_constraintRight_toRightOf="parent">
 
     </android.support.design.widget.TabLayout>
 
@@ -41,5 +32,22 @@
         app:layout_constraintTop_toBottomOf="@+id/tabLayoutHome">
 
     </android.support.v4.view.ViewPager>
+
+
+
+   <android.support.design.widget.BottomNavigationView
+       android:id="@+id/viewHomeBottomNavigation"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:background="@drawable/gradient_bottom_bg"
+       app:itemTextColor="@color/white"
+       app:itemIconTint="@color/white"
+       app:menu="@menu/menu_bottom_navigation"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       >
+
+   </android.support.design.widget.BottomNavigationView>
 
 </android.support.constraint.ConstraintLayout>
