--- a/Code/app/src/main/res/layout/fragment_item_video.xml
+++ b/Code/app/src/main/res/layout/fragment_item_video.xml
@@ -1,34 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/imgViewVideoItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
-
-    <TextView android:id="@+id/tvUploaderName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="5dp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:text="Administrator"
-        app:layout_constraintLeft_toLeftOf="@+id/tvVideoName"
-        app:layout_constraintRight_toRightOf="@+id/tvVideoName"
-        app:layout_constraintBottom_toTopOf="@+id/tvVideoName"
-        >
-
-    </TextView>
 
     <TextView
         android:id="@+id/tvVideoName"
@@ -41,32 +17,51 @@
         android:textSize="18dp"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
-       android:scrollHorizontally="true"
+        android:scrollHorizontally="true"
         android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="@+id/imgViewVideoItem"
-        app:layout_constraintLeft_toLeftOf="@+id/imgViewVideoItem"
-        app:layout_constraintRight_toRightOf="@+id/imgViewVideoItem"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         />
 
-    <ImageView
-        android:id="@+id/imvMusic"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/tvUploaderName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_music"
-        android:padding="5dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintBottom_toTopOf="@+id/tvVideoName"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="5dp"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:text="Administrator"
+        android:singleLine="true"
+        app:layout_constraintLeft_toLeftOf="@+id/tvVideoName"
         app:layout_constraintRight_toRightOf="@+id/tvVideoName"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tvVideoName"
+        >
+    </TextView>
 
     <ImageView
-        android:id="@+id/imvShare"
+        android:id="@+id/imgViewVideoItem"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/anhche14"
+        app:layout_constraintLeft_toLeftOf="@+id/tvUploaderName"
+        app:layout_constraintRight_toRightOf="@+id/tvUploaderName"
+        app:layout_constraintTop_toBottomOf="@+id/tvUploaderName"
+        />
+
+
+    <ImageView
+        android:id="@+id/imvLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_share"
-        android:padding="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/imvMusic"
-        app:layout_constraintRight_toRightOf="@+id/imvMusic"
+        android:src="@drawable/icon_heart"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/cardViewVideoAvatar"
+        app:layout_constraintLeft_toLeftOf="@+id/cardViewVideoAvatar"
+        app:layout_constraintRight_toRightOf="@+id/cardViewVideoAvatar"
         />
 
     <ImageView
@@ -74,41 +69,45 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_cmment"
-        android:padding="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/imvShare"
-        app:layout_constraintRight_toRightOf="@+id/imvShare"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/imvLike"
+        app:layout_constraintLeft_toLeftOf="@+id/imvLike"
+        app:layout_constraintRight_toRightOf="@+id/imvLike"
         />
 
     <ImageView
-        android:id="@+id/imvLike"
+        android:id="@+id/imvShare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_heart"
-        android:padding="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/imvComment"
+        android:src="@drawable/icon_share"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/imvComment"
+        app:layout_constraintLeft_toLeftOf="@+id/imvComment"
         app:layout_constraintRight_toRightOf="@+id/imvComment"
         />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardViewVideoAvatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/imvLike"
-        app:layout_constraintRight_toRightOf="@+id/imvLike"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        app:layout_constraintTop_toTopOf="@+id/imgViewVideoItem"
+        app:layout_constraintRight_toRightOf="@+id/imgViewVideoItem"
+        app:layout_constraintBottom_toBottomOf="@+id/imgViewVideoItem"
         app:cardCornerRadius="15dp"
         >
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imvAvatarUpload"
             android:src="@drawable/icon_video_avatar"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toTopOf="@+id/imvLike"
-            app:layout_constraintRight_toRightOf="@+id/imvLike"
             />
 
     </android.support.v7.widget.CardView>
-
-
-
 
 </android.support.constraint.ConstraintLayout>
