--- a/Code/app/src/main/res/layout/fragment_item_video.xml
+++ b/Code/app/src/main/res/layout/fragment_item_video.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -11,14 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:padding="5dp"
         android:text="sssssssssssssssssssssssssssssss"
         android:textColor="@android:color/white"
         android:textSize="18dp"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
-        android:singleLine="true"
+        android:gravity="center_vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -28,12 +27,9 @@
         android:id="@+id/tvUploaderName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="5dp"
+        android:layout_margin="10dp"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:text="Administrator"
         android:singleLine="true"
         app:layout_constraintLeft_toLeftOf="@+id/tvVideoName"
         app:layout_constraintRight_toRightOf="@+id/tvVideoName"
@@ -41,16 +37,33 @@
         >
     </TextView>
 
-    <ImageView
-        android:id="@+id/imgViewVideoItem"
+    <!--    <ImageView-->
+<!--        android:id="@+id/imgViewVideoItem"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintDimensionRatio="1:1"-->
+<!--        android:src="@drawable/anhche1"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tvUploaderName"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        />-->
+
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gifImgViewVideoItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/anhche14"
-        app:layout_constraintLeft_toLeftOf="@+id/tvUploaderName"
-        app:layout_constraintRight_toRightOf="@+id/tvUploaderName"
-        app:layout_constraintTop_toBottomOf="@+id/tvUploaderName"
-        />
+        app:layout_constraintDimensionRatio="1:1"
+        android:background="@color/black"
+        android:src="@drawable/anhche1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvVideoName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
+    </pl.droidsonroids.gif.GifImageView>
 
     <ImageView
         android:id="@+id/imvLike"
@@ -94,9 +107,9 @@
         android:layout_height="wrap_content"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
-        app:layout_constraintTop_toTopOf="@+id/imgViewVideoItem"
-        app:layout_constraintRight_toRightOf="@+id/imgViewVideoItem"
-        app:layout_constraintBottom_toBottomOf="@+id/imgViewVideoItem"
+        app:layout_constraintTop_toTopOf="@+id/gifImgViewVideoItem"
+        app:layout_constraintRight_toRightOf="@+id/gifImgViewVideoItem"
+        app:layout_constraintBottom_toBottomOf="@+id/gifImgViewVideoItem"
         app:cardCornerRadius="15dp"
         >
 
