--- a/Code/app/src/main/res/layout/fragment_edit_user.xml
+++ b/Code/app/src/main/res/layout/fragment_edit_user.xml
@@ -72,7 +72,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/af"
+            android:src="@drawable/user"
             app:civ_border_color="#FFFFFF"
             app:civ_border_width="2dp" />
 
@@ -177,8 +177,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="1/1/1990"
+        android:hint="--/--/----"
         android:inputType="datetime"
+        android:textColorHint="@color/white"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
