--- a/Code/app/src/main/res/layout/fragment_profileuser_main.xml
+++ b/Code/app/src/main/res/layout/fragment_profileuser_main.xml
@@ -1,79 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-    >
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="0dp"
-            android:orientation="horizontal"
-            android:layout_height="150dp"
-            android:background="@drawable/bg"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:background="@drawable/gradient_background"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/frlo"
+        android:layout_width="110sp"
+        android:layout_height="110sp"
+        android:layout_marginStart="8sp"
+        android:layout_marginTop="90dp"
+        app:layout_constraintEnd_toEndOf="@+id/imgbtn_setting"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgAnhUser"
+            android:layout_width="110sp"
+            android:layout_height="110sp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/user"
+            app:civ_border_color="@color/white"
+            app:civ_border_width="3dp"
+            app:civ_circle_background_color="@color/black" />
+
+    </FrameLayout>
 
     <ImageButton
         android:id="@+id/imgbtn_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@color/transparent"
         android:contentDescription="@string/image_setting"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu" />
 
-        <FrameLayout
-        android:id="@+id/frlo"
-        android:layout_width="110sp"
-        android:layout_height="110sp"
-        android:layout_marginStart="8sp"
-        android:layout_marginTop="110sp"
-        android:layout_marginEnd="8sp"
-        app:layout_constraintEnd_toStartOf="@+id/imgbtn_setting"
-        app:layout_constraintHorizontal_bias="0.13"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imgAnhUser"
-                android:layout_width="110sp"
-                android:layout_height="110sp"
-                android:layout_gravity="center"
-                android:scaleType="centerCrop"
-                android:src="@drawable/af"
-                app:civ_border_color="@color/black"
-                app:civ_border_width="5dp" />
-
-    </FrameLayout>
 
     <TextView
         android:id="@+id/txtTenUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:drawableLeft="@drawable/name"
+        android:paddingLeft="2dp"
         android:text="a"
         android:textColor="@color/white"
         android:textSize="17dp"
-        app:layout_constraintStart_toStartOf="@+id/frlo"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frlo" />
 
     <TextView
         android:id="@+id/txtID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:drawableLeft="@drawable/idcard"
         android:text="@string/facebook_app_id"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/txtTenUser"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtTenUser"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTenUser" />
 
     <android.support.constraint.ConstraintLayout
@@ -120,20 +123,6 @@
         </LinearLayout>
 
 
-        <View
-            android:id="@+id/view1"
-            android:layout_width="2dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/colorPrimaryDark"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/line2"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/line1"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <LinearLayout
             android:id="@+id/line2"
             android:layout_width="wrap_content"
@@ -165,20 +154,6 @@
                 android:textColor="@color/white" />
 
         </LinearLayout>
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="2dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/colorPrimaryDark"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/line3"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/line2"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/line3"
@@ -212,49 +187,85 @@
 
         </LinearLayout>
 
+        <View
+            android:id="@+id/view2"
+            android:layout_width="2dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/line3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/line2"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/view1"
+            android:layout_width="2dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/line2"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/line1"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="@color/yellow"
-            app:tabTextColor="@color/white"
-            app:tabSelectedTextColor="@color/white">
+    <fragment
+        android:id="@+id/myfragment"
+        class="vn.edu.httpgreenacademy.vuivc.Fragment.ProfileUser.FragmentMyList"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        tools:layout="@layout/fragment_myvideo" />
 
-            <android.support.design.widget.TabItem
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/videos" />
+    <TextView
+        android:id="@+id/txtSex"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="12dp"
+        android:drawableLeft="@drawable/intersex"
+        android:shadowColor="#FEFEFE"
+        android:text="----"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/txtID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frlo" />
 
-            <android.support.design.widget.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/like"
-                />
-        </android.support.design.widget.TabLayout>
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/vp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
-
+    <TextView
+        android:id="@+id/txtDate"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
+        android:drawableLeft="@drawable/calendar"
+        android:text="--/--/----"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/txtID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/txtSex"
+        app:layout_constraintTop_toBottomOf="@+id/txtTenUser"
+        app:layout_constraintVertical_bias="0.0" />
     <!--<TextView-->
-        <!--android:id="@+id/textView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@drawable/bg_textview_follow"-->
-        <!--android:gravity="center"-->
-        <!--android:text="@string/follow"-->
-        <!--android:textColor="@color/white"-->
-        <!--tools:layout_editor_absoluteX="155dp"-->
-        <!--tools:layout_editor_absoluteY="170dp" />-->
+    <!--android:id="@+id/textView"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="@drawable/bg_textview_follow"-->
+    <!--android:gravity="center"-->
+    <!--android:text="@string/follow"-->
+    <!--android:textColor="@color/white"-->
+    <!--tools:layout_editor_absoluteX="155dp"-->
+    <!--tools:layout_editor_absoluteY="170dp" />-->
 </android.support.constraint.ConstraintLayout>
