--- a/Code/app/src/main/res/layout/fragment_yeuthich.xml
+++ b/Code/app/src/main/res/layout/fragment_yeuthich.xml
@@ -4,13 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        app:tabIndicatorColor="@color/yellow"
+        app:tabSelectedTextColor="@color/white"
+        app:tabTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TXT_YeuThich">
@@ -39,6 +43,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="@string/yeuthich"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/BT_YeuThich_Back"
         app:layout_constraintEnd_toStartOf="@+id/imgCheAnh"
         app:layout_constraintStart_toEndOf="@+id/BT_YeuThich_Back"
