--- a/Code/app/src/main/res/layout/item_ds_followers.xml
+++ b/Code/app/src/main/res/layout/item_ds_followers.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/af"
+        android:src="@drawable/user"
         app:civ_border_color="#FFFFFF"
         app:civ_border_width="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
