--- a/Code/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/Code/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/navigation_propose"
+        android:title="Đề xuất"
+        android:tooltipText="Đề xuất"
+        android:icon="@drawable/icon_bottom_propose"></item>
+
+    <item
+        android:id="@+id/navigation_discovery"
+        android:title="Khám phá"
+        android:tooltipText="Khám phá"
+        android:icon="@drawable/icon_bottom_discovery"></item>
+
    <item
         android:id="@+id/navigation_add"
         android:title="Add"
@@ -8,15 +20,15 @@
         android:icon="@drawable/icon_bottom_add"></item>
 
     <item
-        android:id="@+id/navigation_message"
-        android:title="Message"
-        android:tooltipText="Message"
+        android:id="@+id/navigation_notification"
+        android:title="Thông báo"
+        android:tooltipText="Thông báo"
         android:icon="@drawable/icon_bottom_message"></item>
 
     <item
         android:id="@+id/navigation_profile"
-        android:title="Profile"
-        android:tooltipText="Profile"
+        android:title="Tôi"
+        android:tooltipText="Tôi"
         android:icon="@drawable/icon_bottom_profile"></item>
 
 </menu>
