--- a/Code/app/src/main/res/values/colors.xml
+++ b/Code/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="Bt_Register">#b52e1c</color>
     <color name="Txt_Error">#FA0000</color>
     <color name="Mau_Button">#32aea2a2</color>
-    <color name="white">#ffff</color>
+    <color name="white">#FFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="black_transparent">#23161616</color>
     <color name="yellow">#F0DD1E</color>
