--- a/Code/app/src/main/res/layout/item_gif.xml
+++ b/Code/app/src/main/res/layout/item_gif.xml
@@ -63,7 +63,8 @@
             android:id="@+id/preview_image_gif_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerInside" />
+            android:scaleType="centerInside"
+            android:visibility="gone"/>
 
 
         <vn.edu.httpgreenacademy.vuivc.GifView
